gap on right side fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,7 +32,8 @@
     font-family: 'Montserrat', sans-serif;
     background-color: #333333;
     overflow-x: hidden;
-    margin-left: 0;
+    width: 100vw;
+    margin: 0;
  }
 
  h2 {
