--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,12 +1,12 @@
 .footer {
     background-color: #000;
-    width: 100vw;
+    width: 100%;
     color: #fff;
     padding: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: -15px;
+    margin-left: -60px;
     margin-bottom: -15px;
     margin-top: 80px;
 }
