--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 #navbar {
     height: 80px;
-    width: 100vw;
+    width: 100%;
     position: fixed;
     top: 0;
     left: 0;
