--- a/app/assets/stylesheets/pages/main.scss
+++ b/app/assets/stylesheets/pages/main.scss
@@ -5,10 +5,10 @@
 #home {
     background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("https://images.unsplash.com/photo-1579758629938-03607ccdbaba?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1050&q=80");
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-size: cover;
     display: flex;
-    margin-left: -15px;
+    // margin-left: -15px;
     margin-top: -15px;
     margin-bottom: 50px;
 }
